@@ -1,3 +1,12 @@
+2006-12-08  Ulrich Drepper  <drepper@redhat.com>
+
+	* malloc/memusage.c: Handle realloc with new size of zero and
+	non-NULL pointer correctly.
+	(me): Really write first record twice.
+	(struct entry): Make format bi-arch safe.
+	(dest): Write out more realloc statistics.
+	* malloc/memusagestat.c (struct entry): Make format bi-arch safe.
+
 2006-11-14  Ulrich Drepper  <drepper@redhat.com>
 
 	* timezone/zdump.c: Redo fix for BZ #3137.
